--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
@@ -32,8 +30,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div>
-                   <div class="collapse navbar-collapse" id="navbarSupportedContent" style="margin-left: 20%;  font-size: 15px;">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <div class="collapse navbar-collapse    " id="navbarSupportedContent"
+                        style=" font-size: 15px; position: absolute;">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item" style="margin-left: 15px;">
                                 <a class="nav-link" href="#abt" role="button" aria-expanded="false">
                                     About me
@@ -57,20 +56,18 @@
                 </div>
             </div>
         </nav>
-        <div>
-          <div class="card">
-            <h1 style="font-size: 3.2vw;" >I Am
-                <div class="scroller">
-                    <span style="font-size: 45px;">
-                        Edwin C George<br />
-                        A Software Developer<br />
-                        A Web Developer<br />
-                        A Designer<br />
-                    </span>
-                </div>
-            </h1>
+<!-- <div class="card">
+    <h1>I Am
+        <div class="scroller">
+            <span>
+                Edwin C George<br />
+                A Software Developer<br />
+                A Web Developer<br />
+                A Designer<br />
+            </span>
         </div>
-        </div>
+    </h1>
+</div> -->
 </div>
 </div>
 <div id="abt" style="background: rgb(63,94,251); height: auto;
